<resources>
    <string name="app_name">OrderIt</string>
    <string name="logo_name">Storex</string>
    <string name="welcome_notes_follow">Follow the latest fashion trends</string>
    <string name="welcome_notes_shop">and shop with</string>
    <string name="sign_in">SIGN IN</string>
    <string name="continue_text">Continue</string>
    <string name="ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_sign_in_using_social_networks">OR, SIGN IN USING SOCIAL NETWORKS</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="rest_passsword_text">Enter your registered Storex password and we will email you a link to reset your password.</string>
    <string name="already_a_member">Already a member?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="retype_password">Retype Password</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="select_your_gender">SELECT YOUR GENDER</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="i_agree_the_terms_of_use">I AGREE THE TERMS OF USE</string>
    <string name="empty_username">This field can\'t be empty</string>
    <string name="match_password">Password doesn\'t match</string>
    <string name="invalid_email">Enter a valid email</string>
    <string name="registering">Registering…</string>
    <string name="signingin">Checking Credentials…</string>
    <string name="loading">Loading…</string>
    <string name="success_registration">Successfully Registered Sign in to continue</string>

    <!--Facebook Credentials-->
    <string name="facebook_app_id">2286390718117695</string>
    <string name="fb_login_protocol_scheme">fb2286390718117695</string>
    <string name="facebook_token">facebookToken</string>
    <string name="token">userToken</string>
    <string name="has_signed_in_before">has_signed_in_before</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="shop">Shop</string>
    <string name="bag">Bag</string>
    <string name="inspiration">Inspiration</string>
    <string name="stores">stores</string>
    <string name="my_account">My Account</string>
    <string name="customer_support">Customer Support</string>
    <string name="logout">Log Out</string>
    <string name="follow_us">FOLLOW US</string>
    <string name="last_chance">LAST CHANCE!</string>
    <string name="holiday_shipping_ends_soon">Holiday shipping ends soon.</string>
    <string name="men">MEN</string>
    <string name="outwear">OUTWEAR</string>
    <string name="women">WOMEN</string>
    <string name="shop_now">SHOP NOW</string>
    <string name="winter_sale">WINTER SALE</string>
    <string name="up_to_60_off">UP TO 60% OFF</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_products">All Products</string>
    <string name="category_id">categoryId</string>
    <string name="customize">CUSTOMIZE</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="size">SIZE</string>
    <string name="color">COLOR</string>
    <string name="you_have_no_items_in_your_shopping_bag">You have no items in your shopping bag.</string>
    <string name="you_have">You have</string>
    <string name="in_your">in your</string>
    <string name="shopping_bag">shopping bag</string>
    <string name="checkout">Checkout</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="username">Username</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip Code</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="card_details">CARD DETAILS</string>
    <string name="enter_your_debit_or_credit_card_details">Enter your debit or credit card details.</string>
    <string name="ship_to">SHIP TO</string>
    <string name="some_intor">We’ve sent you an email with all the details of your order. You can track your shipment with the order id below.</string>
    <string name="thank_you">THANK YOU</string>
    <string name="back_to_shop">BACK TO SHOP</string>
    <string name="title_activity_details_page">DetailsPage</string>

</resources>
