<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/signup_tool_bar"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="@font/sourcesanspro_regular"
            android:layout_gravity="center"
            android:id="@+id/signup_toolbar_title" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/sign_up_container"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:layout_below="@id/signup_tool_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:layout_weight="1"
                android:fontFamily="@font/sourcesanspro_regular"
                app:met_floatingLabelTextColor="@android:color/background_dark"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="true"
                app:met_floatingLabelText="First Name"
                app:met_floatingLabelTextSize="15sp"
                app:met_clearButton="true"
                app:met_autoValidate="true"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:drawablePadding="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/first_name_edit_Text"
                android:singleLine="true"
                android:layout_marginEnd="5dp">
                <requestFocus />
            </com.rengwuxian.materialedittext.MaterialEditText>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:layout_weight="1"
                app:met_autoValidate="true"
                android:fontFamily="@font/sourcesanspro_regular"
                app:met_floatingLabelTextColor="@android:color/background_dark"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="Last Name"
                app:met_floatingLabelTextSize="15sp"
                app:met_clearButton="true"
                app:met_floatingLabelAlwaysShown="true"
                android:layout_marginLeft="5dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:drawablePadding="5dp"
                android:id="@+id/last_name_edit_text"
                android:singleLine="true"
                android:layout_marginStart="5dp">
            </com.rengwuxian.materialedittext.MaterialEditText>

        </LinearLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:fontFamily="@font/sourcesanspro_regular"
            app:met_floatingLabelTextColor="@android:color/background_dark"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="Email"
            app:met_autoValidate="true"
            app:met_floatingLabelTextSize="15sp"
            app:met_clearButton="true"
            app:met_floatingLabelAlwaysShown="true"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:drawablePadding="5dp"
            android:id="@+id/sign_up_email_edit_Text"
            android:singleLine="true">
            <requestFocus />
        </com.rengwuxian.materialedittext.MaterialEditText>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:fontFamily="@font/sourcesanspro_regular"
            app:met_floatingLabelTextColor="@android:color/background_dark"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="Password"
            app:met_floatingLabelTextSize="15sp"
            app:met_clearButton="true"
            android:imeOptions="actionNext"
            app:met_floatingLabelAlwaysShown="true"
            android:inputType="textPassword"
            app:met_autoValidate="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:drawablePadding="5dp"
            android:id="@+id/sign_up_password_edit_text"
            android:singleLine="true">
        </com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/retype_password"
            android:fontFamily="@font/sourcesanspro_regular"
            app:met_floatingLabelTextColor="@android:color/background_dark"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="Retype Password"
            app:met_floatingLabelTextSize="15sp"
            app:met_clearButton="true"
            android:imeOptions="actionNext"
            app:met_floatingLabelAlwaysShown="true"
            android:inputType="textPassword"
            app:met_autoValidate="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:drawablePadding="5dp"
            android:id="@+id/sign_up_retype_password_edit_text"
            android:singleLine="true">
        </com.rengwuxian.materialedittext.MaterialEditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:fontFamily="@font/sourcesanspro_regular"
                android:padding="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="3">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dd"
                    android:fontFamily="@font/sourcesanspro_regular"
                    app:met_floatingLabelTextColor="@android:color/background_dark"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="DD"
                    android:layout_weight="1"
                    app:met_floatingLabelAlwaysShown="true"
                    app:met_floatingLabelTextSize="15sp"
                    app:met_clearButton="true"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    app:met_autoValidate="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:drawablePadding="5dp"
                    android:id="@+id/date_of_birth"
                    android:singleLine="true"
                    android:layout_marginEnd="5dp"
                    tools:ignore="NestedWeights"
                    android:layout_marginRight="5dp">
                    <requestFocus />
                </com.rengwuxian.materialedittext.MaterialEditText>


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mm"
                    android:fontFamily="@font/sourcesanspro_regular"
                    app:met_floatingLabelTextColor="@android:color/background_dark"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="MM"
                    app:met_floatingLabelTextSize="15sp"
                    app:met_clearButton="true"
                    android:imeOptions="actionNext"
                    app:met_autoValidate="true"
                    android:inputType="number"
                    app:met_floatingLabelAlwaysShown="true"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:drawablePadding="5dp"
                    android:id="@+id/month_of_birth"
                    android:layout_marginEnd="5dp"
                    android:singleLine="true"
                    android:layout_marginRight="5dp">
                </com.rengwuxian.materialedittext.MaterialEditText>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/yyyy"
                    android:fontFamily="@font/sourcesanspro_regular"
                    app:met_floatingLabelTextColor="@android:color/background_dark"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="YYYY"
                    app:met_floatingLabelTextSize="15sp"
                    app:met_clearButton="true"
                    android:layout_weight="1"
                    app:met_autoValidate="true"
                    app:met_floatingLabelAlwaysShown="true"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:drawablePadding="5dp"
                    android:id="@+id/year_of_birth"
                    android:layout_marginEnd="5dp"
                    android:singleLine="true"
                    android:layout_marginRight="5dp">
                </com.rengwuxian.materialedittext.MaterialEditText>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_your_gender"
                android:textSize="15sp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Male"
                android:textSize="15sp"
                android:layout_weight="1.8"
                android:id="@+id/male_selector"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Female"
                android:textSize="15sp"
                android:layout_weight="1.8"
                android:id="@+id/female_selector"/>

        </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:scaleType="fitXY"
                android:id="@+id/gender_selector_image"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_male_select_indicator"
                android:layout_marginRight="20dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i_agree_the_terms_of_use"
                android:textSize="15sp"
                android:layout_weight="0.5"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/terms_switch"
                android:layout_weight="1.5"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/sign_up"
            android:id="@+id/sign_up_button"
            android:textColor="@android:color/white"
            android:fontFamily="@font/sourcesanspro_regular"
            android:layout_marginTop="10dp"/>


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sign_up_container"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="fitXY"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/center_polygon_signup"
            android:src="@drawable/ic_polygon"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_light"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/already_a_member"
            android:layout_weight="0.7"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:id="@+id/sign_Up_sign_button"
            android:textColor="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/sign_in"/>
    </LinearLayout>

</RelativeLayout>