<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CompleteFragment">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/complete_tick"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_complete_tick"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/complete_tick"
        android:text="@string/thank_you"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sourcesanspro_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:id="@+id/thank_you_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/some_intor"
        android:id="@+id/some_intro"
        android:padding="10dp"
        android:layout_below="@id/thank_you_text"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:fontFamily="@font/sourcesanspro_light"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@id/some_intro"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/orderId_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="nfknkg"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/sourcesanspro_regular"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="30dp"
        android:background="@color/colorPrimaryDark"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/back_to_shop"
            android:id="@+id/back_to_shop_btn"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:fontFamily="@font/sourcesanspro_bold"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>