<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignInActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/reset_password_tool_bar"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:fontFamily="@font/sourcesanspro_regular"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/signin_toolbar_title" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_password_tool_bar"
        android:fontFamily="@font/sourcesanspro_light"
        android:text="@string/rest_passsword_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center"
        android:padding="20dp"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/sign_in_container"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:fontFamily="@font/sourcesanspro_regular"
            app:met_floatingLabelTextColor="@android:color/background_dark"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="Email"
            app:met_floatingLabelTextSize="15sp"
            app:met_clearButton="true"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:drawableLeft="@drawable/ic_icon_mail"
            android:drawableStart="@drawable/ic_icon_mail"
            android:drawablePadding="5dp"
            android:id="@+id/reset_password_email_edit_Text"
            android:singleLine="true">
            <requestFocus />
        </com.rengwuxian.materialedittext.MaterialEditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/reset_password"
            android:id="@+id/reset_password_button"
            android:textColor="@android:color/white"
            android:fontFamily="@font/sourcesanspro_regular"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sign_in_container"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="fitXY"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/center_polygon_signin"
            android:src="@drawable/ic_polygon"/>
    </RelativeLayout>
</RelativeLayout>